...

    <!--Entry screen-->
    <string name="screen_entry_button_get_started">Get started</string>
    <string name="screen_entry_button_check_your_inbox">Check your message vault</string>
    <string name="screen_entry_link_about">About Secure Messaging</string>
    <string name="screen_entry_coverdrop_not_available">The Secure Messaging feature is currently not available. Make sure your device has a working internet connection and you are on the most recent version of the app. Please restart the app and try again later.</string>
...
    <!--How this works screen-->
    <string name="screen_how_this_works_header">How this works</string>
    <string name="screen_how_this_works_continue">Continue</string>
    <string name="screen_how_this_works_set_up_my_passphrase">Set up my passphrase</string>
    <string name="screen_how_this_works_pager1_title">Send a message</string>
    <string name="screen_how_this_works_pager1_content">Your message will be sent anonymously and securely to a journalist or team. It will be encrypted and indistinguishable from the Guardian app\'s regular network activity.</string>
...
    <string name="screen_new_session_help_banner_learn_more">Learn more</string>
    <string name="screen_new_session_button_already_have_passphrase">I already have a passphrase</string>
    <string name="screen_new_session_button_confirm_passphrase">Confirm passphrase</string>
    <string name="screen_new_session_button_remembered_my_passphrase">I have remembered my passphrase</string>
    <string name="screen_new_session_button_reveal_passphrase">Reveal passphrase</string>
    <string name="screen_new_session_error_entered_passphrase_does_not_match">The passphrase you entered does not match the generated one from the previous screen.</string>
...
    <string name="screen_select_recipient_button_select_team">Select team</string>
    <string name="screen_select_recipient_tab_teams">Teams</string>
    <string name="screen_select_recipient_tab_journalists">Journalists</string>
    <string name="screen_select_recipient_empty_state_no_teams">No teams available. Please select a journalist to talk to instead.</string>

    <!--Continue session screen-->
    <string name="screen_continue_button_confirm_passphrase">Confirm Passphrase</string>
    <string name="screen_continue_button_i_do_not_have_a_passphrase_yet">I do not have a passphrase yet</string>
    <string name="screen_continue_header_enter_passphrase">Enter passphrase</string>
...
    <string name="screen_new_message_text_recipient_loading">loading…</string>
    <string name="screen_new_message_text_recipient_change">Change</string>
    <string name="screen_new_message_text_no_recipient_selected">no recipient selected</string>
    <string name="screen_new_message_text_your_message">What\'s your message?</string>
    <string name="screen_new_message_text_your_message_description">See ‘Compose your first message’ for advice</string>
    <string name="screen_new_message_button_send_message">Send message</string>
    <string name="screen_new_message_error_forced_recipient">At the current time you can only contact a single Guardian recipient.</string>
    <string name="screen_new_message_error_no_recipient_selected">No recipient selected.</string>
...
    <string name="screen_new_message_exit_dialog_title">Leaving your message vault</string>
    <string name="screen_new_message_exit_dialog_text">This will log you out of your secure vault. Your unfinished message will not be sent. Are you sure?</string>
    <string name="screen_new_message_exit_dialog_button_confirm">Log out</string>
    <string name="screen_new_message_exit_dialog_button_cancel">Cancel</string>

    <!--Message sent screen-->
    <string name="screen_message_sent_button_go_to_inbox">Review conversation</string>
    <string name="screen_message_sent_button_logout">Log out from Secure Messaging</string>
    <string name="screen_message_sent_content_main">Your message is being disguised. It will be received by a Guardian journalist within a few hours.\n\nUse the passphrase you memorised to access this conversation again. \n\nJournalists aim to respond in a reasonable time frame. However in busy times replies can take several days. For security reasons you will not receive a notification. You have 
...

    <!--Inbox screen-->
    <string name="screen_inbox_delete_your_messages">Delete message vault</string>
    <string name="screen_inbox_leave_inbox">Leave message vault</string>
    <string name="screen_inbox_about_secure_messaging">About Secure Messaging</string>
    <string name="screen_inbox_delete_dialog_confirmation_heading">Delete your message vault?</string>
    <string name="screen_inbox_delete_dialog_confirmation_content">This will delete your vault and you will not be able to unlock it anymore. You won\'t be able to read any existing messages or responses to them. Messages you\'ve recently sent may still be received by the journalist.</string>
    <string name="screen_inbox_delete_dialog_confirmation_button_delete">Delete everything</string>
    <string name="screen_inbox_delete_dialog_confirmation_button_keep">Keep</string>
    <string name="screen_inbox_delete_dialog_progress_heading">Deleting conversations…</string>
...
    <string name="screen_conversation_sent">Your message has been sent. We recommend that you wait for a response before you send another message.</string>
    <string name="screen_conversation_empty">There are no messages in this conversation. This might be because they expired after 14 days and have been automatically deleted.</string>
    <string name="screen_conversation_button_send_new">Send a new message</string>
    <string name="screen_conversation_heading_secure_conversation">Secure chat with %1$s</string>

...
    <string name="dialog_confirm_new_conversation_heading">Set up your secure message vault</string>
    <string name="dialog_confirm_new_conversation_content">Starting a new conversation will remove any prior messages from your vault, if they existed. \n\nDo you want to continue?</string>
    <string name="dialog_confirm_new_conversation_button_yes">Yes, start a new conversation</string>
    <string name="dialog_confirm_new_conversation_button_no">No</string>

...
