...
            message = "Anyway, this is the info I have ...",
            timestamp = Instant.parse("2023-03-18T10:15:00Z")
        ),
    )
    ChatMessages(
        messages = messages,
        remotePartyName = "Alice",
        now = Instant.parse("2023-03-18T10:16:00Z"),
    )
}

