...
                        cornerRadius = CornerRadius(
                            x = RoundedCorners.XS.toPx(),
                            y = RoundedCorners.XS.toPx()
                        )
                    )
                }
                .testTag("edit_message")
        )
        PrimaryButton(
            text = stringResource(R.string.screen_new_message_button_send_message),
            enabled = !tooLong && messageText.text.isNotEmpty(),
            onClick = {
                focusManager.clearFocus()
...
